--- a/app/src/main/res/layout/activity_scan_and_suscribe.xml
+++ b/app/src/main/res/layout/activity_scan_and_suscribe.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal"
-    tools:context=".activity.ScanActivity">
-
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    tools:context="se.hc.presencedetectionfinal.activity.ScanAndSuscribeActivity">
     <LinearLayout
         android:id="@+id/subscription_message_layout"
         android:layout_width="match_parent"
@@ -18,7 +19,8 @@
             android:id="@+id/button_scanandsuscribe"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="SCAN AND SUSCRIBE" />
+            android:text="SCAN AND SUSCRIBE"
+            android:background="#f3d898" />
 
     </LinearLayout>
 
